[ADD] submodule OCA/stock-logistics-workflow

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	path = ingegniamo/stock_accounting_move_line_valorization_field
 	url = git@github.com:ingegniamo/stock_accounting_move_line_valorization_field.git
 	branch = 14.0
+
+[submodule "OCA/stock-logistics-workflow"]
+	path = OCA/stock-logistics-workflow
+	url = git@github.com:OCA/stock-logistics-workflow.git
+	branch = 14.0
