--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,8 @@
 	path = OCA/server-tools
 	url = git@github.com:OCA/server-tools.git
 	branch = 14.0
+
+[submodule "ingegniamo/stock_picking_quick"]
+	path = ingegniamo/stock_picking_quick
+	url = git@github.com:ingegniamo/stock_picking_quick.git
+	branch = 14.0
